--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ install:
 
 script:
   - make demo
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: demo/output
+  on:
+    branch: master
