Add GitHub actions to replace travis CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,14 @@ packages =
 install_requires =
     sigal
 
+[options.extras_require]
+test =
+    flake8
+
 [options.package_data]
 153957_theme =
     templates/*.html
     static/*/*
+
+[flake8]
+max-line-length = 120
