--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,21 +9,33 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: '3.7'
+
     - name: Install openjdk
       run: |
         sudo apt-get install openjdk-8-jre
+
     - name: Install Python dependencies
       run: |
         pip install --upgrade pip
         pip install -e .[test]
+
     - name: Build site
       run: |
         make demo
+
     - name: Check html
       run: |
         html5validator --root demo/output --show-warnings --also-check-css
 
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3.6.1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: demo/output
+        publish_branch: gh-pages
+        force_orphan: true
