Add more testing requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,9 @@ install_requires =
 [options.extras_require]
 test =
     flake8
+    flake8-isort
+validate =
+    html5validator
 
 [options.package_data]
 153957_theme =
