--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,10 @@ test =
 
 [flake8]
 max-line-length = 120
+ignore =
+    W503
+
+[isort]
+line_length = 120
+multi_line_output = 4
+lines_between_types = 1
