--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.7'
+    - name: Install ffmpeg
+      run: |
+        sudo apt-get update
+        sudo apt-get install ffmpeg
     - name: Install Python dependencies
       run: |
         pip install --upgrade pip
