--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -11,32 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.9'
-    - name: Install ffmpeg
-      run: |
-        sudo apt-get update
-        sudo apt-get install ffmpeg
-    - name: Install Python dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -e .
-    - name: Build site
-      run: |
-        make demo
-    - name: Check html
-      uses: Cyb3r-Jak3/html5validator-action@v0.4.4
-      with:
-        root: demo/output/
-        css: true
-        log_level: INFO
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3.6.1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: demo/output
-        publish_branch: gh-pages
-        force_orphan: true
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - run: |
+          sudo apt-get update
+          sudo apt-get install ffmpeg
+      - run: |
+          pip install --upgrade pip
+          pip install -e .
+      - run: make demo
+      - uses: Cyb3r-Jak3/html5validator-action@v0.6
+        with:
+          root: demo/output/
+          css: true
+          log_level: INFO
+      - uses: peaceiris/actions-gh-pages@v3.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: demo/output
+          publish_branch: gh-pages
+          force_orphan: true
