--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = 153957-theme
-version = 1.0.0
+version = 1
 url = http://github.com/153957/153957-theme/
 author = Arne de Laat
 author_email = arne@delaat.net
@@ -14,6 +14,7 @@ classifiers =
     Programming Language :: Python :: 3
     Topic :: Text Processing :: Markup :: HTML
 license = MIT
+license_file = LICENSE
 description = Theme for sigal generated photo albums
 long_description = file: README.rst
 keywords =
@@ -29,9 +30,11 @@ install_requires =
     sigal
 
 [options.extras_require]
-test =
+dev =
     flake8
     flake8-isort
+    build
+    twine
 
 [options.package_data]
 153957_theme =
@@ -42,8 +45,9 @@ test =
 max-line-length = 120
 ignore =
     W503
+    E501
 
 [isort]
 line_length = 120
-multi_line_output = 4
 lines_between_types = 1
+multi_line_output = 4
