--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,6 +1,7 @@
 name: Run flake8 on Python code
 
-on: [push]
+on:
+  push:
 
 jobs:
   build:
@@ -8,16 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.7'
-    - name: Install Python dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -e .[test]
-    - name: Flake8
-      run: |
-        flake8
-
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - run: make devinstall
+      - run: make flaketest
