--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = 153957-theme
-version = 1
-url = http://github.com/153957/153957-theme/
+version = 2
+url = https://github.com/153957/153957-theme/
 author = Arne de Laat
 author_email = arne@delaat.net
 maintainer = Arne de Laat
