--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,8 @@ classifiers =
 license = MIT
 license_file = LICENSE
 description = Theme for sigal generated photo albums
-long_description = file: README.rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 keywords =
     photo album
     theme
