--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
+          cache-dependency-path: 'setup.cfg'
       - run: |
           sudo apt-get update
           sudo apt-get install ffmpeg
