--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: 'setup.cfg'
+          cache-dependency-path: 'pyproject.toml'
       - run: |
           sudo apt-get update
           sudo apt-get install ffmpeg
