--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  build:
+  rufftest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -12,6 +12,6 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: 'setup.cfg'
-      - run: make devinstall
-      - run: make flaketest
+          cache-dependency-path: 'requirements-ruff.txt'
+      - run: make ruffinstall
+      - run: make rufftest
