--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,8 @@ jobs:
           cache-dependency-path: 'requirements-ruff.txt'
       - run: make ruffinstall
       - run: make rufftest
+        env:
+          RUFF_FORMAT: github
 
   typingtest:
     runs-on: ubuntu-latest
