--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,11 +63,8 @@ skip-string-normalization = true
 [tool.ruff]
 target-version = 'py311'
 line-length = 120
-select = [
-    # https://github.com/charliermarsh/ruff#supported-rules
-    'ALL',
-    'NURSERY',
-]
+preview = true
+select = ['ALL']  # https://docs.astral.sh/ruff/rules/
 ignore = [
     'ANN101',  # No need to add type to self
     'ARG001',  # Function has required argument, even if they are not used
