Update ruff use it for formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,15 +55,14 @@ strict = true
 warn_return_any = true
 warn_unused_configs = true
 
-[tool.black]
-target-version = ['py311']
-line-length = 120
-skip-string-normalization = true
-
 [tool.ruff]
-target-version = 'py311'
 line-length = 120
-preview = true
+target-version = 'py311'
+
+[tool.ruff.format]
+quote-style = 'single'  # Prefer single quotes, except for triple quotes strings
+
+[tool.ruff.lint]
 select = ['ALL']  # https://docs.astral.sh/ruff/rules/
 ignore = [
     'ANN101',  # No need to add type to self
@@ -77,15 +76,17 @@ ignore = [
     'PD',  # Not using pandas
     'PLR0913',  # Allow functions with many arguments
     'PT',  # Not using pytest
-    'Q000',  # Use single quotes
     'RET504',  # Allow variable assignment before return
     'SIM108',  # Allow if-else block instead of ternary
     'T201',  # Allow using print
     'TRY003',  # Specific messages for common exception classes
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = 'single'
+
+[tool.ruff.lint.per-file-ignores]
 'demo/sigal.conf.py' = ['N999']  # Allow invalid module name for default config
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 lines-between-types = 1
