--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: Cyb3r-Jak3/html5validator-action@v7.2.0
         with:
           root: demo/output/
-          css: true
+          css: false
           log_level: INFO
       - uses: peaceiris/actions-gh-pages@v3.9.3
         with:
