Use uv run in make targets
Add serve target.

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,7 +1,11 @@
-.PHONY: demo clean
+.PHONY: serve
+serve: demo
+	uv run sigal serve --browser
 
+.PHONY: demo
 demo: clean
-	sigal build
+	uv run sigal build
 
+.PHONY: clean
 clean:
 	rm -rf output
